Updated Image_Processor to work with IRL buoys

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 
 # Team Specific Code
 Mission\ Reconstruction\ and\ Analysis\ Programs/
+Image\ Processing\ Testing/
 
 # Mission Data
 frames/
